sjengida/g1/reset_board
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/reset_board/src/utils.c:1578:23: error: use of undeclared identifier 'unk_41DD00'
qmemcpy( init_board, &unk_41DD00, sizeof( init_board)); 
                      ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/reset_board/src/obj/utils.o] Error 1
